<resources>
    <string name="app_name">queroANIME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_authentication">Continuar com o Email</string>
    <string name="google_authentication">Continuar com o Google</string>
    <string name="facebook_authentication">Continuar com o Facebook</string>
    <string name="label_create_account">Não possui conta?</string>
    <string name="button_signup_here">Inscreva-se</string>
    <string name="quero_anime_logotipo">Quero Anime Logotipo</string>
    <string name="hint_email">Insira o seu email</string>
    <string name="hint_password">Senha</string>
    <string name="still_connected">Continuar conectado?</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="signin">Entrar</string>
    <string name="email_signup">Registrar-se</string>
    <string name="hint_confirm_password">Confirme a senha</string>
    <string name="signup">Registrar</string>
    <string name="send_email">Enviar email</string>
    <string name="email_advise">Será enviado um link de redefinição de senha ao seu email.\nVerifique sua Caixa de Spam.</string>
    <string name="passwords_dont_match">As senhas não coincidem</string>
    <string name="insert_password">Insira a sua senha.</string>
    <string name="insert_confirmation_password">Insira a sua confirmação de senha.</string>
    <string name="account_created">Parabéns! Conta criada com sucesso.</string>
    <string name="email_send">Email enviado com sucesso!</string>
    <string name="server_client_id">1018714872894-94bkmoq2ijoo4halok90ofcdei44jkdj.apps.googleusercontent.com</string>
    <string name="skip">Pular</string>
    <string name="home">Início</string>
    <string name="search">Pesquisar</string>
    <string name="favorites">Favoritos</string>
    <string name="add_favorites">Adicionar aos Favoritos</string>
    <string name="profile">Perfil</string>
    <string name="anime_image">Anime Image</string>
    <string name="trending_emote">Trending Emote</string>
    <string name="anime_name">Anime Name</string>
    <string name="most_watched">Mais assistidos (Geral)</string>
    <string name="most_watched_series">Séries mais assistidas</string>
    <string name="most_watched_movies">Filmes mais assistidos</string>
    <string name="see_details">Ver Detalhes</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="gender">Genero:</string>
    <string name="search_desired_anime">Pesquise o anime desejado.</string>
    <string name="users_collection">Users</string>
    <string name="success_favorite">Favoritado com Sucesso</string>
    <string name="error_favorite">Ocorreu um erro inesperado.</string>
    <string name="error_favorite_login">Para favoritar um anime entre com a sua conta!</string>
    <string name="anime_id">animeId</string>
</resources>