<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.view.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:background="@drawable/btn_circle"
            android:drawableStart="@drawable/ic_arrow_back"
            android:paddingHorizontal="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/email_authentication"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/button_back"
            app:layout_constraintStart_toEndOf="@id/button_back"
            app:layout_constraintTop_toTopOf="@id/button_back" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:contentDescription="@string/quero_anime_logotipo"
            android:src="@drawable/ic_queroanime_logo"
            app:chainUseRtl="true"
            app:layout_constraintBottom_toTopOf="@id/input_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/btn_input"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/input_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_input"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/cb_still_connected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email" />

        <CheckBox
            android:id="@+id/cb_still_connected"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:button="@null"
            android:drawableStart="@drawable/cb_input"
            android:fontFamily="@font/biryani"
            android:text="@string/still_connected"
            android:textColor="@color/color_green_secondary"
            app:layout_constraintBottom_toTopOf="@id/button_login"
            app:layout_constraintStart_toStartOf="@id/input_password"
            app:layout_constraintTop_toBottomOf="@id/input_password" />

        <TextView
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/biryani"
            android:paddingTop="3dp"
            android:text="@string/forgot_password"
            android:textColor="@color/red_primary"
            app:layout_constraintBottom_toBottomOf="@id/cb_still_connected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cb_still_connected" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/color_green"
            android:padding="16dp"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/label_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_still_connected" />


        <TextView
            android:id="@+id/label_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/biryani"
            android:text="@string/label_create_account"
            android:textSize="15sp"
            android:textStyle="bold"
            app:chainUseRtl="true"
            app:layout_constraintBottom_toTopOf="@id/progress_bar"
            app:layout_constraintEnd_toStartOf="@id/button_signup_here"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login" />

        <TextView
            android:id="@+id/button_signup_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/biryani"
            android:text="@string/button_signup_here"
            android:textColor="@color/color_green_secondary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/label_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_create_account"
            app:layout_constraintTop_toTopOf="@id/label_create_account" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:indeterminateTint="@color/color_green_secondary"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_create_account"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>