<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.ForgotPasswordFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:background="@drawable/btn_circle"
            android:drawableStart="@drawable/ic_arrow_back"
            android:paddingHorizontal="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/button_back"
            app:layout_constraintStart_toEndOf="@id/button_back"
            app:layout_constraintTop_toTopOf="@id/button_back" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:contentDescription="@string/quero_anime_logotipo"
            android:src="@drawable/ic_queroanime_logo"
            app:tint="@color/white"
            app:chainUseRtl="true"
            app:layout_constraintBottom_toTopOf="@id/input_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/btn_input"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/button_send_reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <Button
            android:id="@+id/button_send_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/color_green"
            android:padding="16dp"
            android:text="@string/send_email"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/tv_email_advise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email" />
        <TextView
            android:id="@+id/tv_email_advise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/email_advise"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/biryani"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_send_reset_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>