<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainAuthenticationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/button_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_background_secondary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            android:text="@string/skip"
            />

        <ImageView
            android:layout_marginTop="48dp"
            android:id="@+id/iv_logo"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:src="@drawable/ic_queroanime_logo"
            app:layout_constraintBottom_toTopOf="@id/email_authentication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/quero_anime_logotipo" />

        <Button
            android:id="@+id/email_authentication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/color_green"
            android:padding="16dp"
            android:text="@string/email_authentication"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/google_authentication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <Button
            android:id="@+id/google_authentication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#5583EC"
            android:drawableLeft="@drawable/ic_google"
            android:padding="16dp"
            android:text="@string/google_authentication"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/label_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_authentication" />

        <!--
        <Button
            android:id="@+id/facebook_authentication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#415792"
            android:drawableLeft="@drawable/ic_facebook"
            android:padding="16dp"
            android:paddingStart="25dp"
            android:text="@string/facebook_authentication"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/label_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/google_authentication" />
        -->
        <TextView
            android:id="@+id/label_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/biryani"
            android:text="@string/label_create_account"
            android:textSize="15sp"
            android:textStyle="bold"
            app:chainUseRtl="true"
            app:layout_constraintEnd_toStartOf="@id/button_signup_here"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/google_authentication"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
            android:id="@+id/button_signup_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/biryani"
            android:text="@string/button_signup_here"
            android:textColor="@color/color_green_secondary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/label_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_create_account"
            app:layout_constraintTop_toTopOf="@id/label_create_account" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>